welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  for (i<-0 to (len(nums)-1)) {
^