welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var x=-1
  for (i<-0 to (len(nums)-1)) {
    if (nums(i)==lookingFor) {
      x=i
    }
  }
  x
}